# Lab37_WS

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile  vcpkg.json
backend/src/: main.cpp
backend/src/components/: collision_state.hpp  polygon_shape.hpp  render_meta.hpp  robot_tag.hpp  score_state.hpp  session_state.hpp  static_tag.hpp  transform.hpp  velocity.hpp  waypoint_path.hpp
backend/src/engine/: simulation_engine.cpp  simulation_engine.hpp
backend/src/engine/systems/: broadcast_system.cpp  broadcast_system.hpp  collision_system.cpp  collision_system.hpp  input_system.cpp  input_system.hpp  kinematics_system.cpp  kinematics_system.hpp  logging_system.cpp  logging_system.hpp  movement_system.cpp  movement_system.hpp  scoring_system.cpp  scoring_system.hpp  transform_system.cpp  transform_system.hpp
backend/src/infra/: config_loader.cpp  config_loader.hpp  ecs_state_store.cpp  ecs_state_store.hpp  in_process_bus.cpp  in_process_bus.hpp  scene_loader.cpp  scene_loader.hpp  spdlog_logger.cpp  spdlog_logger.hpp  spsc_command_source.hpp  token_bucket.hpp  websocket_gateway.cpp  websocket_gateway.hpp
backend/src/interfaces/: i_collision_detector.hpp  i_command_source.hpp  i_logger.hpp  i_message_bus.hpp  i_robot_kinematics.hpp  i_state_store.hpp
backend/src/math/: aabb.hpp  vec2.hpp
backend/src/physics/: ackermann_model.hpp  sat_detector.cpp  sat_detector.hpp  spatial_hash_grid.cpp  spatial_hash_grid.hpp
backend/src/protocol/: command_message.hpp  command_validator.hpp  entity_snapshot.hpp  state_serializer.cpp  state_serializer.hpp
backend/tests/benchmarks/: flatbuffer_benchmark.cpp  full_tick_benchmark.cpp  sat_benchmark.cpp  spatial_hash_benchmark.cpp
backend/tests/integration/: collision_flow_test.cpp  command_roundtrip_test.cpp
backend/tests/property/: ackermann_property_test.cpp  sat_property_test.cpp  spatial_hash_property_test.cpp
backend/tests/unit/: aabb_test.cpp  ackermann_test.cpp  command_validator_test.cpp  sat_detector_test.cpp  spatial_hash_test.cpp  token_bucket_test.cpp  vec2_test.cpp
config/: benchmark.json  debug.json  default.json
docs/: DDD_Robot_Teleoperation_Simulation.md  Implementation_Plan.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ControlPanel.tsx  ErrorBoundary.tsx  HUDOverlay.tsx  SimulationCanvas.tsx
frontend/src/services/: CommandEncoder.ts  ConnectionManager.ts  FlatBufferDecoder.ts  InputHandler.ts  PerformanceMonitor.ts
frontend/src/store/: gameStore.ts
frontend/src/types/: commands.ts  entities.ts  protocol.ts
frontend/src/utils/: camera.ts  logger.ts  math.ts
frontend/tests/e2e/: collision.spec.ts  connection.spec.ts  control.spec.ts
frontend/tests/property/: input.property.test.ts  rendering.property.test.ts
frontend/tests/unit/: ConnectionManager.test.ts  FlatBufferDecoder.test.ts  InputHandler.test.ts  gameStore.test.ts
proto/: teleop.fbs
